# projected-descent

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
include/projected-descent/: base.hpp  box_constrained_qp.hpp
tests/: CMakeLists.txt  test_box_constrained_qp.cpp
